--- a/JAE_Review.bib
+++ b/JAE_Review.bib
@@ -75,7 +75,7 @@
   urldate = {2023-09-26},
   abstract = {El presente documento tiene como objeto describir los principales ecosistemas marinos de la regi\'on (ecosistema costero bonaerense, plataforma media, norpatag\'onico, austral y talud) y aportar informaci\'on biol\'ogica y pesquera de los recursos de importancia comercial m\'as relevantes, as\'i como de los restantes componentes biol\'ogicos que habitan esos ecosistemas (fito y zooplancton, invertebrados bent\'onicos). Se espera que esta informaci\'on contribuya, en una primera instancia, a la planificaci\'on de futuras prospecciones s\'ismicas, de forma tal de minimizar el eventual impacto que ellas pudiesen causar sobre la biota de estos ecosistemas. Tambi\'en se brinda informaci\'on sobre la distribuci\'on de la flota pesquera y la normativa vigente de manejo para las diferentes pesquer\'ias que se desarrollan en la ZEEA.},
   langid = {spanish},
-  file = {/Users/tomasmarina/Zotero/storage/BTU98YVW/Allega et al. - 2020 - Estado del conocimiento biológico pesquero de los .pdf}
+  file = {/home/leonardo/Zotero/storage/BTU98YVW/Allega et al. - 2020 - Estado del conocimiento biológico pesquero de los .pdf}
 }
 
 @article{Alonso2019,
@@ -413,7 +413,7 @@
   abstract = {The Western Antarctic Peninsula is one of the most rapidly warming regions on earth. It is therefore important to analyze long-term trends and inter-annual patterns of change in major environmental parameters to understand the process underlying climate change in Western Antarctica. Since many polar long-term data series are fragmented and cannot be analysed with common time series analysis tools, we present statistical approaches that can deal with missing values. We applied U-statistics after Pettit and Buishand to detect abrupt changes, dynamic factor analysis to detect functional relationships, and additive modelling to detect patterns in time related to climatic cycles such as the Southern Annular Mode and El Ni\~no Southern Oscillation in a long-term environmental data set from King George Island (WAP), covering 20 years. Our results not only reveal sudden changes for sea surface temperature and salinity, but also clear patterns in all investigated variables (sea surface temperature, salinity, suspended particulate matter and Chlorophyll a) that can directly be related to climatic cycles. Our results complement previous findings on climate related changes in the King George Island Region and provide insight into the environmental conditions and climatic drivers of system change in the study area. Hence, our statistical analyses may prove valuable for other polar environmental data sets and contribute to a better understanding of the regional variability of climate change and its impact on coastal systems.},
   langid = {english},
   keywords = {Climatic Driver,Generalize Additive Modeling,Southern Annular Mode,Suspended Particulate Matter Concentration,Western Antarctic Peninsula},
-  file = {/Users/tomasmarina/Zotero/storage/8RGLGY66/Bers et al. - 2013 - Analysis of trends and sudden changes in long-term.pdf}
+  file = {/home/leonardo/Zotero/storage/8RGLGY66/Bers et al. - 2013 - Analysis of trends and sudden changes in long-term.pdf}
 }
 
 @article{Bester2021,
@@ -750,7 +750,7 @@
   doi = {10.1016/B978-0-12-381015-1.00004-6},
   urldate = {2023-09-26},
   abstract = {Patagonian toothfish (Dissostichus eleginoides) is a large notothenioid fish that supports valuable fisheries throughout the Southern Ocean. D. eleginoides are found on the southern shelves and slopes of South America and around the sub-Antarctic islands of the Southern Ocean. Patagonian toothfish are a long-lived species ({$>$}50 years), which initially grow rapidly on the shallow shelf areas, before undertaking an ontogenetic migration into deeper water. Although they are active predators and scavengers, there is no evidence of large-scale geographic migrations, and studies using genetics, biochemistry, parasite fauna and tagging indicate a high degree of isolation between populations in the Indian Ocean, South Georgia and the Patagonian Shelf. Patagonian toothfish spawn in deep water (ca. 1000m) during the austral winter, producing pelagic eggs and larvae. Larvae switch to a demersal habitat at around 100mm (1-year-old) and inhabit relatively shallow water ({$<$}300m) until 6\textendash 7 years of age, when they begin a gradual migration into deeper water. As juveniles in shallow water, toothfish are primarily piscivorous, consuming the most abundant suitably sized local prey. With increasing size and habitat depth, the diet diversifies and includes more scavenging. Toothfish have weakly mineralised skeletons and a high fat content in muscle, which helps neutral buoyancy, but limits swimming capacity. Toothfish generally swim with labriform motion, but are capable of more rapid sub-carangiform swimming when startled. Toothfish were first caught as a by-catch (as juveniles) in shallow trawl fisheries, but following the development of deep water longlining, fisheries rapidly developed throughout the Southern Ocean. The initial rapid expansion of the fishery, which led to a peak of over 40,000tonnes in reported landings in 1995, was accompanied by problems of bird by-catch and overexploitation as a consequence of illegal, unreported and unregulated fishing (IUU). These problems have now largely been addressed, but continued vigilance is required to ensure that the species is sustainably exploited and the ecosystem effects of the fisheries are minimised.},
-  file = {/Users/tomasmarina/Zotero/storage/3QL86QHE/B9780123810151000046.html}
+  file = {/home/leonardo/Zotero/storage/3QL86QHE/B9780123810151000046.html}
 }
 
 @article{Collins2012,
@@ -1147,7 +1147,7 @@
   urldate = {2023-09-26},
   abstract = {Penguins accumulate mercury due to their long-life span together with their high trophic position. We sampled adult and juveniles' feathers from three colonies of Spheniscus magellanicus from Tierra del Fuego along an inshore-offshore corridor. We integrated toxicological information (mercury concentrations) and foraging biomarkers ({$\delta$}13C, {$\delta$}15N) into a common data analysis framework (isotopic niche analysis) to evaluate the influence of age, location, and foraging behaviors on mercury concentrations. Adults had higher feather mercury concentrations, {$\delta$}13C, and {$\delta$}15N values compared to juveniles. Also, adult and juvenile feather mercury concentrations differed between colonies, with lower mercury concentrations at the nearest inshore colony relative to the farther offshore colonies. Trophic position and the isotopic niche analyses suggest that this geographic gradient in mercury concentrations is due to differences in colonies' foraging areas. Understanding penguins' exposure to mercury derived from local food webs is a crucial first step in evaluating the impacts of this heavy metal on their conservation status.},
   keywords = {Austral Ocean,Contamination niche,Mercury,Seabirds,Trophic niche},
-  file = {/Users/tomasmarina/Zotero/storage/WJ5EWJVF/S0025326X21012182.html}
+  file = {/home/leonardo/Zotero/storage/WJ5EWJVF/S0025326X21012182.html}
 }
 
 @article{Duarte2011,
@@ -1314,16 +1314,9 @@
   pages = {105478},
   issn = {01411136},
   doi = {10.1016/j.marenvres.2021.105478},
-<<<<<<< HEAD
-  urldate = {2023-09-21},
-  abstract = {Situated in the sub-Antarctic region, Beagle Channel represents a unique marine ecosystem due to the connection between the Pacific and the Atlantic Oceans, and its proximity to the Antarctic Peninsula. Ushuaia city, the biggest settlement on the channel, exerts an increasing anthropogenic pressure by discharges of urban and industrial effluents. In the present work, we use Patagonotothen tessellata, one of the most abundant and widespread species in the channel, as a bioindicator species in order to evidence anthropic impact from Ushuaia Bay and surrounding areas. We first analyzed and characterized real time gene expression of androgen receptor, estrogen receptor and different forms of vitellogenin (VTG), under laboratory conditions. This was achieved by induction with estradiol of P. tessellata males. Then, the selected genes were used as biomarkers for an environmental biomonitoring study. Morphometric indices and circulating sex steroids (estradiol and testosterone) were also quantified in male fish collected from different sites. The qPCR analysis showed that vtgAb form is more inducible than vtgAa or vtgC forms after estrogen induction. The field survey revealed the up-regulation of vtgAb and the androgen receptor in fish from sites with higher anthropogenic influence. Sex steroids followed seasonal variations according to their reproductive cycle, with higher levels of estradiol and testosterone in winter and summer seasons. The use of biomarkers such as gene expression of VTG demonstrates that fish from Ushuaia Bay are likely to be exposed to endocrine disrupting compounds. To our knowledge, this research is the first attempt to assess the endocrine disruption associated to anthropic impact in a widespread fish of the Beagle Channel and contributes to a better understanding of the reproductive physiology of sub Antarctic ichthyofauna.},
-  keywords = {Anthropogenic activity,Endocrine disruption,Notothenioid fish,Sex steroids,Sub Antarctica,Vitellogenin gene expression},
-  file = {/home/leonardo/Zotero/storage/72NRZRKZ/S0141113621002348.html}
-=======
   urldate = {2023-09-19},
   abstract = {Situated in the sub-Antarctic region, Beagle Channel represents a unique marine ecosystem due to the connection between the Pacific and the Atlantic Oceans, and its proximity to the Antarctic Peninsula. Ushuaia city, the biggest settlement on the channel, exerts an increasing anthropogenic pressure by discharges of urban and in\- dustrial effluents. In the present work, we use Patagonotothen tessellata, one of the most abundant and widespread species in the channel, as a bioindicator species in order to evidence anthropic impact from Ushuaia Bay and surrounding areas. We first analyzed and characterized real time gene expression of androgen receptor, estrogen receptor and different forms of vitellogenin (VTG), under laboratory conditions. This was achieved by induction with estradiol of P. tessellata males. Then, the selected genes were used as biomarkers for an environmental biomonitoring study. Morphometric indices and circulating sex steroids (estradiol and testosterone) were also quantified in male fish collected from different sites. The qPCR analysis showed that vtgAb form is more inducible than vtgAa or vtgC forms after estrogen induction. The field survey revealed the up-regulation of vtgAb and the androgen receptor in fish from sites with higher anthropogenic influence. Sex steroids followed seasonal variations according to their reproductive cycle, with higher levels of estradiol and testosterone in winter and summer seasons. The use of biomarkers such as gene expression of VTG demonstrates that fish from Ushuaia Bay are likely to be exposed to endocrine disrupting compounds. To our knowledge, this research is the first attempt to assess the endocrine disruption associated to anthropic impact in a widespread fish of the Beagle Channel and contributes to a better understanding of the reproductive physiology of sub Antarctic ichthyofauna.},
   langid = {english}
->>>>>>> b1870752ebb9e8dd7cc42bfddf8572f181d782a8
 }
 
 @article{Fioramonti2022,
@@ -1358,7 +1351,7 @@
   langid = {english}
 }
 
-@article{Franco2020a,
+@article{Franco2020,
   title = {Subsurface {{Ocean Warming Hotspots}} and {{Potential Impacts}} on {{Marine Species}}: {{The Southwest South Atlantic Ocean Case Study}}},
   shorttitle = {Subsurface {{Ocean Warming Hotspots}} and {{Potential Impacts}} on {{Marine Species}}},
   author = {Franco, B{\'a}rbara C. and Combes, Vincent and Gonz{\'a}lez Carman, Victoria},
@@ -1820,7 +1813,7 @@
   file = {/home/leonardo/Zotero/storage/PWHDPCYJ/Gross et al. - 2009 - Generalized Models Reveal Stabilizing Factors in F.pdf}
 }
 
-@article{Guihou2020a,
+@article{Guihou2020,
   title = {Dynamical Connections between Large Marine Ecosystems of Austral {{South America}} Based on Numerical Simulations},
   author = {Guihou, Karen and Piola, Alberto R. and Palma, Elbio D. and Chidichimo, Maria Paz},
   year = {2020},
@@ -2006,7 +1999,7 @@
   urldate = {2023-09-26},
   abstract = {This paper explores the impact of fishing low trophic level ``forage'' species on higher trophic level marine predators including other fish, birds and marine mammals. We show that existing analyses using trophic models have generally ignored a number of important factors including (1) the high level of natural variability of forage fish, (2) the weak relationship between forage fish spawning stock size and recruitment and the role of environmental productivity regimes, (3) the size distribution of forage fish, their predators and subsequent size selective predation (4) the changes in spatial distribution of the forage fish as it influences the reproductive success of predators. We show that taking account of these factors generally tends to make the impact of fishing forage fish on their predators less than estimated from trophic models. We also explore the empirical relationship between forage fish abundance and predator abundance for a range of U.S. fisheries and show that there is little evidence for a strong connection between forage fish abundance and the rate of change in the abundance of their predators. We suggest that any evaluation of harvest policies for forage fish needs to include these issues, and that models tailored for individual species and ecosystems are needed to guide fisheries management policy.},
   keywords = {Ecopath,Ecosystem based fishery management,Forage fish,Marine predators,Small pelagics},
-  file = {/Users/tomasmarina/Zotero/storage/MF2HVJ4Z/S0165783617300176.html}
+  file = {/home/leonardo/Zotero/storage/MF2HVJ4Z/S0165783617300176.html}
 }
 
 @article{Hill2012,
@@ -2023,7 +2016,7 @@
   urldate = {2023-09-26},
   abstract = {Foodweb models provide a useful framework for compiling data on biomass, production, consumption and feeding relationships. They are particularly useful for identifying gaps and inconsistencies in the data, and for exploring plausible scenarios of change. We compiled data on the pelagic foodweb of the South Georgia shelf, which is one of the most intensively studied areas in the Southern Ocean. The data suggest that current average annual copepod production is three times that of Antarctic krill and that flying seabirds and fish are, respectively, responsible for 25\% and 21\% of local krill consumption. The most striking inconsistency was that estimated consumption of fish was 5 times their estimated production. We developed a static mass balance model of the foodweb representing one of many possible solutions to the inconsistencies in the data. The model included sufficient fish biomass to balance the original consumption estimate, and consequently fish became the main krill consumers. Nonetheless, only 74\% of local krill production was consumed by predators, suggesting that there are additional mortality sources that we did not explicitly model. We developed further models to explore scenarios incorporating plausible climate-driven reductions in krill biomass. In scenarios with unchanged predator diets, an 80\% reduction in krill biomass resulted in a 73\% reduction in vertebrate biomass. However, when predators with diverse diets were able to switch to feeding on alternative zooplankton prey, total vertebrate biomass was maintained at current levels. Scenarios in which 80\% of krill biomass was replaced with copepod biomass required 28\% more primary production because the estimated consumption rate of copepods is higher than that of krill. The additional copepod biomass did not alter the consequences for vertebrates. These scenarios illustrate the wide range of potential consequences of a shift from a krill to a copepod dominated system in a warming climate. They suggest that both maintenance and dramatic reduction of vertebrate production are plausible outcomes, although the former requires major changes in predator diets.},
   keywords = {Climatic changes,Competitors,Ecosystem services,Foodweb model,Primary production},
-  file = {/Users/tomasmarina/Zotero/storage/EL984388/Hill et al. - 2012 - A foodweb model to explore uncertainties in the So.pdf;/Users/tomasmarina/Zotero/storage/49ZJV9E7/S0967064511002190.html}
+  file = {/home/leonardo/Zotero/storage/EL984388/Hill et al. - 2012 - A foodweb model to explore uncertainties in the So.pdf;/home/leonardo/Zotero/storage/49ZJV9E7/S0967064511002190.html}
 }
 
 @article{Hill2013,
@@ -2094,7 +2087,7 @@
   abstract = {Coastal food webs that are supported by multiple primary producer sources are considered to be more stable against perturbations. Here, we investigated how declining macroalgal abundance and diversity might influence coastal food web structure along an annual sea ice cover gradient along the Western Antarctic Peninsula (WAP). The most common benthic invertebrate consumers, macroalgae, and surface particulate organic matter were collected at 15 stations along the WAP. Stable carbon and nitrogen isotope values of primary producers changed negligibly in relation to the sea ice cover gradient, while isotope values of most invertebrate feeding groups increased with higher sea ice cover, although at low explanatory power. Food web length became shorter and consumer trophic niche width smaller in regions with higher sea ice cover. Changes in food web structure were mostly associated with shifts in trophic position of lower trophic levels. Food web structure in higher ice-covered regions resembled that of more generalist feeders with a loss of specialist species, concurrent with an increased reliance on a more reworked detrital food source. These results suggest that a number of benthic invertebrates are able to adjust to differences in basal energy sources. Conversely, these food webs dominated by generalist feeders are likely less efficient in energy transfer, which can create less-stable systems with lower adaptive capacity to disturbance. The predicted sea ice loss along the WAP may ultimately lead to a longer food web with higher macroalgal abundance, more specialist species, and wider consumer trophic niches in the currently more ice-covered regions.},
   langid = {english},
   keywords = {Invertebrates,Stable isotope,Trophic structure},
-  file = {/Users/tomasmarina/Zotero/storage/UJZ64P5F/Iken et al. - 2023 - Macroalgal input into the coastal food web along a.pdf}
+  file = {/home/leonardo/Zotero/storage/UJZ64P5F/Iken et al. - 2023 - Macroalgal input into the coastal food web along a.pdf}
 }
 
 @article{Irons2000,
@@ -2460,13 +2453,6 @@
   pages = {235--249},
   issn = {0018-8158, 1573-5117},
   doi = {10.1007/s10750-017-3424-8},
-<<<<<<< HEAD
-  urldate = {2023-09-20},
-  abstract = {The aim of this work was to analyze the thermal responses of Odontesthes nigricans, Eleginops maclovinus and diadromous Galaxias maculatus, key species in estuarine areas of the Beagle Channel (Tierra del Fuego, Argentina), under a climate change scenario. We hypothesized that in the southernmost limit of the species' distribution, individuals are more likely to be affected by indirect consequences of climate change rather than direct temperature mortality. Their thermal tolerance limits were assessed using the Critical Thermal Methodology and their preferred temperatures, using a thermal gradient. Additionally, the Fulton's condition factor and the energy density of individuals were analyzed as a proxy of the condition of fishes acclimated to different temperatures. Results showed that species analyzed have the ability to acclimate to the different temperatures, intermediate to large tolerance polygons and positive relationships between preferred and acclimation temperatures, indicating their eurythermic nature. Thus, O. nigricans, E. maclovinus and diadromous G. maculatus populations from Tierra del Fuego could experience enhanced performances because of moderate warming being and, as it was hypothesized, be influenced by indirect consequences of climate change (habitat degradation or changes in trophic structure) since they are living in environments that are widely cooler than their maximum tolerance.},
-  langid = {english},
-  keywords = {CTM,Energy density,Eurythermal teleosts,Patagonia,Thermal preference,Thermal tolerance polygon},
-  file = {/home/leonardo/Zotero/storage/VT5J6S8J/Lattuca et al. - 2018 - Thermal responses of three native fishes from estu.pdf}
-=======
   urldate = {2023-09-19},
   langid = {english}
 }
@@ -2483,7 +2469,6 @@
   doi = {10.1016/j.scitotenv.2022.159284},
   urldate = {2023-09-19},
   langid = {english}
->>>>>>> b1870752ebb9e8dd7cc42bfddf8572f181d782a8
 }
 
 @article{Lau2018,
@@ -2948,7 +2933,7 @@
   copyright = {2019 The Author(s)},
   langid = {english},
   keywords = {Climate-change ecology,Ecological networks,Ecosystem ecology,Stable isotope analysis},
-  file = {/Users/tomasmarina/Zotero/storage/8FWJIZ8P/Michel et al. - 2019 - Increased sea ice cover alters food web structure .pdf}
+  file = {/home/leonardo/Zotero/storage/8FWJIZ8P/Michel et al. - 2019 - Increased sea ice cover alters food web structure .pdf}
 }
 
 @incollection{Mintenbeck2012,
@@ -3136,7 +3121,7 @@
   school = {Universidad Nacional de C\'ordoba}
 }
 
-@article{Nilsson2016a,
+@article{Nilsson2016,
   title = {Interaction Strength Revisited\textemdash Clarifying the Role of Energy Flux for Food Web Stability},
   author = {Nilsson, Karin A. and McCann, Kevin S.},
   year = {2016},
@@ -3373,7 +3358,7 @@
   title = {Marmap: {{Import}}, {{Plot}} and {{Analyze Bathymetric}} and   {{Topographic Data}}},
   author = {Pante, E. and {Simon-Bouhet}, B. and Irisson, J.},
   year = {2023},
-  file = {/Users/tomasmarina/Zotero/storage/5DDSFNR3/marmap.pdf}
+  file = {/home/leonardo/Zotero/storage/5DDSFNR3/marmap.pdf}
 }
 
 @article{Paparazzo2021,
@@ -3408,12 +3393,7 @@
   urldate = {2023-09-19},
   abstract = {Because of their peculiar life cycle, introduced anadromous salmonids can have cascading effects on both marine and freshwater communities. From an ecological standpoint, there are three aspects of exotic salmonids that merit special attention: the factors that govern the establishment of wild populations, the impact of the introduced fish on the receiving communities, and their adaptations to the new environments. Here, we examine several case studies dealing with anadromous salmonids introduced in Patagonia, the southern region of Argentina, from these three viewpoints.},
   isbn = {978-1-4020-0884-9},
-<<<<<<< HEAD
-  langid = {english},
-  file = {/home/leonardo/Zotero/storage/DHNJZ9MA/Pascual y Ciancio - 2007 - Introduced Anadromous Salmonids in Patagonia Risk.pdf}
-=======
   langid = {english}
->>>>>>> b1870752ebb9e8dd7cc42bfddf8572f181d782a8
 }
 
 @article{Pasotti2015,
@@ -3531,7 +3511,7 @@
   copyright = {\textcopyright{} 2020 The Authors. Global Change Biology published by John Wiley \& Sons Ltd},
   langid = {english},
   keywords = {Arctic,Barents Sea,body size,borealization,ecological network,ecosystem vulnerability,food web structure,prediction of feeding interactions,trait-based approach},
-  file = {/Users/tomasmarina/Zotero/storage/MBI4MX26/Pecuchet et al. - 2020 - Novel feeding interactions amplify the impact of s.pdf;/Users/tomasmarina/Zotero/storage/VDFRXFID/gcb.html}
+  file = {/home/leonardo/Zotero/storage/MBI4MX26/Pecuchet et al. - 2020 - Novel feeding interactions amplify the impact of s.pdf;/home/leonardo/Zotero/storage/VDFRXFID/gcb.html}
 }
 
 @article{Pecuchet2022,
@@ -3549,11 +3529,7 @@
   copyright = {\textcopyright{} 2022 The Authors. Diversity and Distributions published by John Wiley \& Sons Ltd.},
   langid = {english},
   keywords = {arcto-boreal ecosystem,Barents Sea,fish-benthos communities,fishing pressure,functional diversity patterns,marine food web,spatial turnover},
-<<<<<<< HEAD
-  file = {/home/leonardo/Zotero/storage/X3IRPCN8/Pecuchet et al. - 2022 - Spatio-temporal turnover and drivers of bentho-dem.pdf}
-=======
-  file = {/Users/tomasmarina/Zotero/storage/EJ7SYY5I/Pecuchet et al. - 2022 - Spatio-temporal turnover and drivers of bentho-dem.pdf;/Users/tomasmarina/Zotero/storage/XN8W68MK/ddi.html}
->>>>>>> b1870752ebb9e8dd7cc42bfddf8572f181d782a8
+  file = {/home/leonardo/Zotero/storage/EJ7SYY5I/Pecuchet et al. - 2022 - Spatio-temporal turnover and drivers of bentho-dem.pdf;/home/leonardo/Zotero/storage/XN8W68MK/ddi.html}
 }
 
 @article{Perez2020,
@@ -3926,7 +3902,7 @@
   copyright = {2019 The Author(s)},
   langid = {english},
   keywords = {Climate-change ecology,Ecological networks,Food webs},
-  file = {/Users/tomasmarina/Zotero/storage/E74GCJTM/Rossi et al. - 2019 - Antarctic food web architecture under varying dyna.pdf}
+  file = {/home/leonardo/Zotero/storage/E74GCJTM/Rossi et al. - 2019 - Antarctic food web architecture under varying dyna.pdf}
 }
 
 @article{Rowlands2021,
@@ -4113,7 +4089,7 @@
   abstract = {The objectives of the present study were to characterize the benthic invertebrate communities at the Marine Protected Area (MPA) Namuncur\'a/Burdwood bank (created by the National Law 26875, year 2013) and their different sub-areas, to compare these benthic communities with nearby sub-areas, and to detect sites that meet the criteria of Vulnerable Marine Ecosystems (VMEs) to highlight the importance of this particular and rich sub-Antarctic region. We used quali- and quantitative data obtained from research cruises developed by Argentina in 2016 and 2017. The results showed that Porifera was the most important component (in terms of wet biomass) of these benthic communities, followed by Cnidaria and Echinodermata. The evidences regarding general composition of the main taxonomical groups of the benthic invertebrate community did not support the maintenance of the original zoning of the MPA (core, buffer, and transition), considering that only a weak differentiation was found among the sub-areas designed in the creation Law. Additionally, the analyzed evidences also demonstrated that this MPA was different from other neighboring areas. Vulnerable and fragile organisms recorded in many locations led to the detection of fourteen sites located inside the MPA Namuncur\'a that meet the characteristics of VMEs (wet biomass of\,{$\geq$}\,10~kg 1200~m-2 of vulnerable and fragile species). These evidences reinforce the conservation value of these particular and susceptible sub-Antarctic benthic communities, composed of both Antarctic and Magellanic species.},
   langid = {english},
   keywords = {Argentina,Conservation,Marine Protected Area,Sub-Antarctic benthic communities},
-  file = {/Users/tomasmarina/Zotero/storage/UMFV9ZM6/Laura and Mariano - 2021 - Benthic communities at the marine protected area N.pdf}
+  file = {/home/leonardo/Zotero/storage/UMFV9ZM6/Laura and Mariano - 2021 - Benthic communities at the marine protected area N.pdf}
 }
 
 @article{Schloss2012,
@@ -4162,7 +4138,7 @@
   abstract = {A compilation of more than 30 studies shows that adult Antarctic krill (Euphausia superba) may frequent benthic habitats year-round, in shelf as well as oceanic waters and throughout their circumpolar range. Net and acoustic data from the Scotia Sea show that in summer 2-20\% of the population reside at depths between 200 and 2000 m, and that large aggregations can form above the seabed. Local differences in the vertical distribution of krill indicate that reduced feeding success in surface waters, either due to predator encounter or food shortage, might initiate such deep migrations and results in benthic feeding. Fatty acid and microscopic analyses of stomach content confirm two different foraging habitats for Antarctic krill: the upper ocean, where fresh phytoplankton is the main food source, and deeper water or the seabed, where detritus and copepods are consumed. Krill caught in upper waters retain signals of benthic feeding, suggesting frequent and dynamic exchange between surface and seabed. Krill contained up to 260 nmol iron per stomach when returning from seabed feeding. About 5\% of this iron is labile, i.e., potentially available to phytoplankton. Due to their large biomass, frequent benthic feeding, and acidic digestion of particulate iron, krill might facilitate an input of new iron to Southern Ocean surface waters. Deep migrations and foraging at the seabed are significant parts of krill ecology, and the vertical fluxes involved in this behavior are important for the coupling of benthic and pelagic food webs and their elemental repositories.},
   copyright = {\textcopyright{} 2011, by the Association for the Sciences of Limnology and Oceanography, Inc.},
   langid = {english},
-  file = {/Users/tomasmarina/Zotero/storage/FZKFLQTE/Schmidt et al. - 2011 - Seabed foraging by Antarctic krill Implications f.pdf;/Users/tomasmarina/Zotero/storage/SFFF3BBM/lo.2011.56.4.html}
+  file = {/home/leonardo/Zotero/storage/FZKFLQTE/Schmidt et al. - 2011 - Seabed foraging by Antarctic krill Implications f.pdf;/home/leonardo/Zotero/storage/SFFF3BBM/lo.2011.56.4.html}
 }
 
 @article{Seco2021,
@@ -4258,7 +4234,7 @@
   urldate = {2023-09-26},
   abstract = {The South Sandwich Islands (SSI), a chain of volcanic islands in the Atlantic sector of the Southern Ocean, are home to two large notothenoid species: the Patagonian toothfish Dissostichus eleginoides and the Antarctic toothfish Dissostichus mawsoni. Both species support valuable fisheries throughout the Southern Ocean under management of the Commission for the Conservation of Antarctic Marine Living Resources (CCAMLR). The SSI region, which is located south of the Southern Antarctic Circumpolar Current Front, has a diverse and distinct biodiversity and it represents a range edge for the distribution of both toothfish species. In this paper we have updated and expanded previous biological analyses with recent data, explored the stock hypotheses and links of these species to other regions, and investigated the role of the SSI archipelago in the life cycles of both toothfish species, where they overlap in their distribution. We conclude that Patagonian toothfish around the SSI are linked to the adjacent South Georgia population, but have some unique characteristics, including faster growth and better somatic condition, possibly reflecting `Bergmann's rule' which states that body size increases with decreasing temperature and increasing latitude. By comparison, the Antarctic toothfish at the SSI appear to be the northern extent of a larger stock connecting further south towards the Antarctic continent. Finally, we consider the relative importance of the SSI in the life cycle of both species, including in the context of climatic changes to this region.},
   keywords = {Antarctic toothfish,Life history,Patagonian toothfish,Range edge distribution,South Sandwich Islands,spp.},
-  file = {/Users/tomasmarina/Zotero/storage/PGGQJMT4/S0967064522000832.html}
+  file = {/home/leonardo/Zotero/storage/PGGQJMT4/S0967064522000832.html}
 }
 
 @article{Souza2018,
@@ -4340,7 +4316,7 @@
   file = {/home/leonardo/Zotero/storage/NG93823K/Strydom et al. - 2021 - A roadmap towards predicting species interaction n.pdf}
 }
 
-@article{Tamini2023a,
+@article{Tamini2023,
   title = {Bird Scaring Lines Reduce Seabird Mortality in Mid-Water and Bottom Trawlers in {{Argentina}}},
   author = {Tamini, L L and Dellacasa, R F and Chavez, L N and Marinao, C J and G{\'o}ngora, M E and Crawford, R and Frere, E},
   year = {2023},
@@ -4609,9 +4585,6 @@
   file = {/home/leonardo/Zotero/storage/5MTVYJJB/Vanella et al. - 2007 - Changes in the fish fauna associated with a sub-An.pdf}
 }
 
-<<<<<<< HEAD
-@article{Verges2014a,
-=======
 @article{Vanella2010,
   title = {Temperature Influence on Post-Prandial Metabolic Rate of Sub-{{Antarctic}} Teleost Fish},
   author = {Vanella, Fabi{\'a}n Alberto and Boy, Claudia C. and Lattuca, Mar{\'i}a Eugenia and Calvo, Jorge},
@@ -4629,7 +4602,6 @@
 }
 
 @article{Verges2014,
->>>>>>> b1870752ebb9e8dd7cc42bfddf8572f181d782a8
   title = {The Tropicalization of Temperate Marine Ecosystems: Climate-Mediated Changes in Herbivory and Community Phase Shifts},
   shorttitle = {The Tropicalization of Temperate Marine Ecosystems},
   author = {Verg{\'e}s, Adriana and Steinberg, Peter D. and Hay, Mark E. and Poore, Alistair G. B. and Campbell, Alexandra H. and Ballesteros, Enric and Heck, Kenneth L. and Booth, David J. and Coleman, Melinda A. and Feary, David A. and Figueira, Will and Langlois, Tim and Marzinelli, Ezequiel M. and Mizerek, Toni and Mumby, Peter J. and Nakamura, Yohei and Roughan, Moninya and {van Sebille}, Erik and Gupta, Alex Sen and Smale, Dan A. and Tomas, Fiona and Wernberg, Thomas and Wilson, Shaun K.},
@@ -4679,7 +4651,7 @@
   issn = {0718-1957},
   doi = {10.4067/S0718-19572005000100002},
   urldate = {2023-09-28},
-  file = {/Users/tomasmarina/Zotero/storage/2D44Z5QM/Vinuesa - 2005 - Distribución de crustáceos decápodos y estomatópod.pdf;/Users/tomasmarina/Zotero/storage/5P6JIRVG/scielo.html}
+  file = {/home/leonardo/Zotero/storage/2D44Z5QM/Vinuesa - 2005 - Distribución de crustáceos decápodos y estomatópod.pdf;/home/leonardo/Zotero/storage/5P6JIRVG/scielo.html}
 }
 
 @article{Vinuesa2007,
