Update supporting information add authors

--- a/SupportingInformation.tex
+++ b/SupportingInformation.tex
@@ -118,10 +118,48 @@
 networks to multiple stressors in a marine latitudinal gradient of the
 Southern Hemisphere'}
 \author{}
+
 \date{\vspace{-2.5em}}
 
 \begin{document}
+
 \maketitle
+
+Tomás I. Marina\textsuperscript{1}, Leonardo A.
+Saravia\textsuperscript{1,2,*}, Iara D. Rodriguez\textsuperscript{3},
+Manuela Funes\textsuperscript{4}, Georgina Cordone\textsuperscript{5},
+Santiago R. Doyle\textsuperscript{3,6}, Anahí
+Silvestro\textsuperscript{6}, David E. Galván\textsuperscript{5},
+Susanne Kortsch\textsuperscript{7} \& Fernando Momo\textsuperscript{3,6}
+
+\textsuperscript{1} Centro Austral de Investigaciones Científicas
+(CADIC-CONICET), Ushuaia, Argentina;
+
+\textsuperscript{2} Instituto de Ciencias Polares, Ambiente y Recursos
+Naturales, Universidad Nacional de Tierra del Fuego (UNTdF), Ushuaia,
+Argentina;
+
+\textsuperscript{3} Instituto de Ciencias, Universidad Nacional de
+General Sarmiento (UNGS), Los Polvorines, Argentina;
+
+\textsuperscript{4} Instituto de Investigaciones Marinas y Costeras
+(IIMyC-CONICET), Mar del Plata, Argentina;
+
+\textsuperscript{5} Centro Para el Estudio de Sistemas Marinos
+(CESIMAR-CONICET), Puerto Madryn, Argentina;
+
+\textsuperscript{6} Instituto de Ecología y Desarrollo Sustentable
+(INEDES-CONICET-UNLu), Luján, Argentina;
+
+\textsuperscript{7} Tvärminne Zoological Station, University of
+Helsinki, Hanko, Finland.
+
+* corresponding author: Leonardo A. Saravia. Centro Austral de
+Investigaciones Científicas (CADIC-CONICET), Ushuaia, Argentina.
+\href{mailto:lasaravia@untdf.edu.ar}{\nolinkurl{lasaravia@untdf.edu.ar}}
+
+\newpage
+
 
 Table S1. Node-level properties for species being impacted by
 environmental and/or anthropogenic stressors (see Table 2 in the article
