--- a/manuscript.tex
+++ b/manuscript.tex
@@ -121,6 +121,9 @@
 stressors in a marine latitudinal gradient of the Southern
 Hemisphere}\label{the-response-of-trophic-interaction-networks-to-multiple-stressors-in-a-marine-latitudinal-gradient-of-the-southern-hemisphere}
 
+\subsection{Running Title: Marine stressors in the Southern
+Hemisphere}\label{running-title-marine-stressors-in-the-southern-hemisphere}
+
 Tomás I. Marina\textsuperscript{1}, Leonardo A.
 Saravia\textsuperscript{1,2,*}, Iara D. Rodriguez\textsuperscript{3},
 Manuela Funes\textsuperscript{4}, Georgina Cordone\textsuperscript{5},
@@ -972,9 +975,9 @@ of trophic cascades. & Kratina, LeCraw, Ingram, \& Anholt (2012) \\
 
 \normalsize
 
-\subsubsection{4.1 Main stressors effects on food webs in a southwest
+\subsubsection{4.1 Main stressor effects in food webs in a southwest
 Atlantic - Antarctic
-gradient}\label{main-stressors-effects-on-food-webs-in-a-southwest-atlantic---antarctic-gradient}
+gradient}\label{main-stressor-effects-in-food-webs-in-a-southwest-atlantic---antarctic-gradient}
 
 The most common stressor reported along the southwest Atlantic -
 Antarctic gradient is global warming, except for Beagle Channel and
